<resources>
    <string name="app_name">InventoryApp</string>
    <string name="error_add_book">Error: could not add book!</string>
    <string name="book_added">Book successfully added!</string>
    <string name="error_update_book">Error: could not update book information!</string>
    <string name="book_updated">Book details successfully updated!</string>
    <string name="publication_title">Title:</string>
    <string name="sale">Sale</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="united_states_currency">USD</string>

    <string name="details_activity">Details activity</string>
    <string name="hint_title">Enter book title</string>
    <string name="hint_price">Book price</string>
    <string name="currency_USD">$</string>
    <string name="supplier_name">Supplier name</string>
    <string name="book">Book</string>
    <string name="phone">Phone:</string>
    <string name="supplier">Supplier:</string>
    <string name="name">Name:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="insert_book">Add new book</string>
    <string name="update_book">Edit book</string>
    <string name="book_deleted">The book has been deleted!</string>
    <string name="mandatory_book_title">Please complete book title</string>
    <string name="mandatory_supplier_name">Please complete supplier name</string>
    <string name="mandatory_supplier_phone">Please complete supplier phone</string>

    <string name="delete_book_confirmation">Are you sure you want to delete this book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_save_alert">Exit without saving?</string>
    <string name="main_menu_insert_dummy">Insert dummy data</string>
    <string name="main_menu_delete_all">Delete all data</string>
    <string name="add_some_books">Add some books..Take note that book title, supplier name and phone are all required fields.</string>
    <string name="decrease_quantity">-</string>
    <string name="increase_quantity">+</string>
    <string name="sale_forbiden">No more products to sell!</string>
    <string name="quantity_below_zero">Cannot decrease beyond 0!</string>
    <string name="order">Order</string>
    <string name="enter_phone">Please enter phone number!</string>
    <string name="number_of_books">Number  of  books:</string>
    <string name="number_of_suppliers">Number of suppliers:</string>

</resources>