<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/half_margin">

        <TextView
            style="@style/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/half_margin"
            android:text="@string/publication_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_item_product_name"
            style="@style/et_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            tools:text="nume produs" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/half_padding">

        <TextView
            android:id="@+id/product_price_label"
            style="@style/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginRight="@dimen/half_margin"
            android:text="@string/price" />

        <TextView
            android:id="@+id/tv_list_item_product_price"
            style="@style/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_toEndOf="@id/product_price_label"
            tools:text="23$" />

        <Button
            android:id="@+id/product_sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/half_margin"
            android:layout_toEndOf="@id/tv_list_item_product_price"
            android:background="@drawable/sale_button"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:text="@string/sale"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/product_quantity_label"
            style="@style/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/half_margin"
            android:layout_toEndOf="@id/product_sale_button"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/tv_list_item_product_quantity"
            style="@style/et_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_toEndOf="@id/product_quantity_label"
            tools:text="40" />
    </RelativeLayout>

</LinearLayout>